--- a/_includes/postpreview.html
+++ b/_includes/postpreview.html
@@ -11,4 +11,4 @@
 {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
 <span class="post-meta"><u>{{ post.date | date: date_format }}</u></span>
 <p>{{ post.excerpt }}</p>
-<a class="read-more" href="{{ post.url | relative_url }}">READ MORE</a>
+<p><a class="read-more" href="{{ post.url | relative_url }}">READ MORE</a></p>
