--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,18 +1,18 @@
 ---
 layout: default
 ---
-<div class="categories">
-	<center>
-		<h1>{{ page.title }}</h1>
-	</center>
 
-	<hr noshade width="200">
-	<ul class="post-list">
-		{% for post in site.categories[page.category] %}
-		<li>
-			{% include postpreview.html %}
-		</li>
-		<hr noshade width="200"> {% endfor %}
-	</ul>
-	***
+<div class="categories">
+  <div class="titleBlock">
+    <h1>{{ page.title }}</h1>
+  </div>
+
+  <hr width="200" />
+  <ul class="post-list">
+    {% for post in site.categories[page.category] %}
+    <li class="post-preview">
+      {% include postpreview.html %}
+    </li>
+    {% endfor %}
+  </ul>
 </div>
