--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-<link href="/assets/main.css" rel="stylesheet">
+<link href={{"/assets/main.css" | absolute_url }} rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
   {% include head.html %}
 
@@ -8,7 +8,9 @@
     <main class="page">
         {{ content }}
     </main>
-  {% include footer.html %}
-  </body>
 
+  </body>
+  <footer>
+  {% include footer.html %}
+  </footer>
 </html>
