--- a/assets/main.scss
+++ b/assets/main.scss
@@ -38,17 +38,18 @@ body {
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: black;
   }
-  h2 {
-    text-shadow: 1px 1px 0 rgb(0, 0, 0);
-    padding: 0;
-    margin-top: 10px;
-    font-style: italic;
-    font-weight: normal;
-    font-size: 35px;
-    -webkit-text-fill-color: white; /* Will override color (regardless of order) */
-    -webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: black;
-  }
+}
+h2 {
+  text-transform: uppercase;
+  text-shadow: 1px 1px 0 rgb(0, 0, 0);
+  padding: 0;
+  margin-top: 20px;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 30px;
+  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;
 }
 .post-list {
   list-style-type: none;
@@ -57,6 +58,7 @@ body {
 }
 .post-preview {
   margin-bottom: 25px;
+  margin-right: 1.3%;
   padding-bottom: 5px;
   p {
     padding: 0;
@@ -74,11 +76,19 @@ body {
   }
   .read-more {
     float: left;
-    padding-top: 10px;
+    padding-top: 5spx;
     font-size: 15px;
   }
 }
-
+.post-preview:nth-last-of-type() {
+  margin-right: 0;
+}
+.see-more {
+  text-transform: uppercase;
+  float: left;
+  padding-top: 5spx;
+  font-size: 15px;
+}
 .blogImage {
   position: relative;
   padding-bottom: 20px;
@@ -126,18 +136,21 @@ body {
     transition: 0.1s;
   }
 }
+.topic {
+  margin-top: 20px;
+}
 @media only screen and (min-width: 500px) and (max-width: 900px) {
-  .topic {
-    height: 18em;
-  }
-  .topic a {
-    width: 48%;
-    margin: 6px auto;
-  }
+  // .topic {
+  //   height: 18em;
+  // }
+  // .topic a {
+  //   width: 48%;
+  //   margin: 6px auto;
+  // }
 
-  a.seeMore {
-    height: 9em;
-  }
+  // a.seeMore {
+  //   height: 9em;
+  // }
 }
 @media only screen and (min-width: 900px) {
   /* For desktop: */
@@ -152,9 +165,9 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
-  .post-preview:not(:first-child) {
+  .post-preview {
     max-width: 32%;
     img {
       height: 300px;
@@ -170,7 +183,8 @@ body {
     }
   }
 
-  .post-preview {
+  .post-preview.first {
+    max-width: 100%;
     img {
       height: 600px;
       width: 100%;
@@ -178,13 +192,13 @@ body {
     p {
       max-width: 50%;
     }
-  }
-  .blogImage {
-    .post-link {
-      font-size: 55px;
-    }
-    .post-categories {
-      font-size: 30px;
+    .blogImage {
+      .post-link {
+        font-size: 55px;
+      }
+      .post-categories {
+        font-size: 30px;
+      }
     }
   }
 }
