changed absolute_url to relative_url

--- a/_includes/postpreview.html
+++ b/_includes/postpreview.html
@@ -1,5 +1,5 @@
 <div class="blogImage">
-  <img src={{ "/assets/img/" | absolute_url }}/{{ post.image }}/>
+  <img src={{ "/assets/img/" | relative_url }}/{{ post.image }}/>
   <!-- <img src="{{ site.url }}/{{ site.baseurl }}/assets/img/{{ post.image }}"> -->
   <a class="post-link" href="{{ post.url | relative_url }}"
     >{{ post.title | escape }}</a
