--- a/_includes/head.html
+++ b/_includes/head.html
@@ -72,8 +72,8 @@ nav a:nth-of-type(1):hover {
 <head>
   <nav>
     <center>
-    <a href={{ "/" | absolute_url}}>Victor J Perez III</a>
-		<a href={{ "/" | absolute_url}}>Blog</a>
+    <a href={{ "/" | relative_url}}>Victor J Perez III</a>
+		<a href={{ "/" | relative_url}}>Blog</a>
     <a href={{ "topics.html" | relative_url}}>Topics</a>
     <a href={{ "about.html" | relative_url}}>About</a>
     <a href="https://victorjperez.github.io/">Portfolio</a>
