Fixed scss error

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -80,7 +80,7 @@ h2 {
     font-size: 15px;
   }
 }
-.post-preview:nth-last-of-type() {
+.post-preview:last-of-type {
   margin-right: 0;
 }
 .see-more {
