Post formatting complete

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,8 +64,8 @@ nav a:nth-of-type(1):hover {
   }
   nav a{
     padding: 0 3%;
-    margin-top: 1%;
-    font-size: 25px;
+    margin-top: 1.2%;
+    font-size: 20px;
   }
 }
 </style>
@@ -73,10 +73,10 @@ nav a:nth-of-type(1):hover {
   <nav>
     <center>
     <a href={{ "/" | relative_url}}>Victor J Perez III</a>
-		<a href={{ "/" | relative_url}}>Blog</a>
-    <a href={{ "topics.html" | relative_url}}>Topics</a>
-    <a href={{ "about.html" | relative_url}}>About</a>
-    <a href="https://victorjperez.github.io/">Portfolio</a>
+		<a href={{ "/" | relative_url}}>LATEST</a>
+    <a href={{ "topics.html" | relative_url}}>TOPICS</a>
+    <a href={{ "about.html" | relative_url}}>ABOUT</a>
+    <a href="https://victorjperez.github.io/">PORTFOLIO</a>
   </center>
 	</nav>
 	<title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
