--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,6 +19,7 @@ body {
     text-decoration: none;
     font-style: italic;
     color: inherit;
+    text-transform: uppercase;
     &:hover {
       text-shadow: 1px 1px 0 #8254eb, 2px 2px 0 white, 3px 3px 0 black;
       transition: 0.1s;
@@ -39,17 +40,34 @@ body {
     -webkit-text-stroke-color: black;
   }
 }
-h2 {
+h2,
+h2 a {
   text-transform: uppercase;
   text-shadow: 1px 1px 0 rgb(0, 0, 0);
   padding: 0;
   margin-top: 20px;
+  margin-bottom: 0;
   font-style: italic;
   font-weight: normal;
   font-size: 30px;
   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
+}
+h3 {
+  padding: 0;
+  margin: 15px 0;
+  font-weight: normal;
+  font-size: 24px;
+}
+.post-content {
+  text-align: left;
+  max-width: 60%;
+  margin: 0 auto;
+  margin-bottom: 25px;
+}
+.post-image {
+  max-width: 60%;
 }
 .post-list {
   list-style-type: none;
@@ -125,6 +143,9 @@ h2 {
     text-shadow: 2px 2px 0 black;
     transform: translate(-50%, -50%);
     font-size: 20px;
+    a {
+      font-style: normal;
+    }
   }
 }
 .pagination {
