--- a/_layouts/Page.html
+++ b/_layouts/Page.html
@@ -25,17 +25,12 @@ layout: default
   </div>
 </div>
 </article>
-<hr width="100%" />
-  <h4>You May Also Enjoy</h4>
-
-  {% assign random = site.time | date: "%s%N" | modulo: site.posts.size %}
-  <h1>{{ site.posts[random].title }}</h1>
-
-
+<hr class="absolute-hr" >
+  <h2 class="h2-with-absolute-hr">Latest in {{ page.categories[0] }}</h2>
   {% assign postCount = 1 %}
   <ul class="post-list">
     {% for post in site.posts %}
-      {% if post.categories[0] == page.categories[0] and postCount <= 3 %}
+      {% if post.categories[0] == page.categories[0] and postCount <= 3 and page.title != post.title %}
         <li class="post-preview">
           {% include postpreview.html %}
         </li>
