--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,10 +12,11 @@ nav {
 }
 
 nav a {
-  margin-top: 2%;
+  margin-top: 2.4%;
   display: inline-block;
   text-align: center;
   padding: 0% 3%;
+  font-size: 15px;
   color: black;
   text-decoration: none;
   border-left: 0.5px solid black;
