--- a/assets/main.scss
+++ b/assets/main.scss
@@ -46,7 +46,7 @@ h2 a {
   text-shadow: 1px 1px 0 rgb(0, 0, 0);
   padding: 0;
   margin-top: 20px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   font-style: italic;
   font-weight: normal;
   font-size: 30px;
@@ -229,7 +229,7 @@ h3 {
   width: 100%;
 }
 .h2-with-absolute-hr {
-  margin-top: 70px;
+  margin-top: 55px;
 }
 footer {
   hr {
