--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 40px;
   border-top: 0.5px solid black;
   border-bottom: 0.5px solid black;
