--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,6 @@
 body {
   font-family: "Cardo", serif;
   background-color: white;
-
   padding: 0;
   margin: 0;
 }
@@ -49,12 +48,14 @@ h2 a {
   text-shadow: 1px 1px 0 rgb(0, 0, 0);
   padding: 0;
   margin-top: 20px;
-  margin-bottom: 20px;
   font-style: italic;
   font-weight: normal;
   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
+}
+.page h2 {
+  margin-bottom: 0;
 }
 h3 {
   padding: 0;
@@ -75,6 +76,9 @@ h3 {
   margin-top: 35px;
   padding: 0;
 }
+.related-posts .post-list {
+  margin-top: 15px;
+}
 .post-preview {
   margin-bottom: 25px;
   padding-bottom: 30px;
@@ -94,7 +98,7 @@ h3 {
   }
   .read-more {
     float: left;
-    padding-top: 5spx;
+    padding-top: 5px;
     font-size: 15px;
   }
 }
@@ -103,8 +107,7 @@ h3 {
 }
 .see-more {
   text-transform: uppercase;
-  float: left;
-  padding-top: 5spx;
+  padding-top: 5px;
   font-size: 15px;
 }
 .blogImage {
@@ -160,6 +163,27 @@ h3 {
 .topic {
   margin-top: 20px;
 }
+hr {
+  border-style: solid;
+  border-width: 0.5px;
+  border-color: black;
+}
+.absolute-hr {
+  position: absolute;
+  left: 0;
+  width: 99vw;
+}
+.h2-with-absolute-hr {
+  margin-top: 50px;
+}
+footer {
+  hr {
+    width: 99vw;
+  }
+  p {
+    padding-left: 20px;
+  }
+}
 @media only screen and (min-width: 500px) and (max-width: 900px) {
   .page {
     margin: 0 auto;
@@ -189,21 +213,14 @@ h3 {
   h2 a {
     font-size: 28px;
   }
-}
-.absolute-hr {
-  position: absolute;
-  left: 0;
-  width: 99vw;
-}
-.h2-with-absolute-hr {
-  margin-top: 55px;
-}
-footer {
-  hr {
-    width: 99vw;
+  .absolute-hr {
+    width: 99.8vw;
   }
-  p {
-    padding-left: 20px;
+
+  footer {
+    hr {
+      width: 99.8vw;
+    }
   }
 }
 
@@ -269,7 +286,9 @@ footer {
       font-size: 20px;
     }
   }
-
+  .see-more {
+    float: left;
+  }
   .post-preview.first {
     max-width: 100%;
     img {
