--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,7 +41,15 @@ body {
     -webkit-text-stroke-color: black;
   }
 }
-h2,
+h2 {
+  color: black;
+  font-size: 20px;
+  text-transform: uppercase;
+  padding: 0;
+  margin-top: 20px;
+  font-style: italic;
+  font-weight: normal;
+}
 h2 a {
   font-size: 20px;
   text-transform: uppercase;
