--- a/assets/main.scss
+++ b/assets/main.scss
@@ -90,6 +90,7 @@ h3 {
 .post-preview {
   margin-bottom: 25px;
   padding-bottom: 30px;
+  min-height: 300px;
   p {
     padding: 0 10px;
     text-align: left;
