--- a/assets/main.scss
+++ b/assets/main.scss
@@ -299,6 +299,7 @@ footer {
     float: left;
   }
   .post-preview.first {
+    width: 100%;
     max-width: 100%;
     img {
       height: 600px;
