--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,18 +5,18 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 40px;
   border-top: 0.5px solid black;
   border-bottom: 0.5px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 nav a {
-  margin-top: 2.4%;
-  display: inline-block;
-  text-align: center;
   padding: 0% 3%;
-  font-size: 15px;
+  font-size: 14px;
   color: black;
   text-decoration: none;
   border-left: 0.5px solid black;
@@ -31,11 +31,9 @@ nav a:hover {
   transition: .1s;
 }
 nav a:nth-of-type(1) {
-  margin-top: 0;
   font-size: 0;
   font-style: italic;
   border-left: 0;
-  top: 5%;
   left: 10px;
   color: black;
   text-shadow: 1px 1px 0 rgb(0, 0, 0);
@@ -56,11 +54,11 @@ nav a:nth-of-type(1):hover {
   }
 }
 @media only screen and (min-width: 500px) and (max-width: 900px) {
-    nav a:nth-of-type(1) {
-    font-size: 0;
+  nav a{
+    font-size: 14px;
   }
-  nav a{ 
-    margin-top: 1%;
+   nav a:nth-of-type(1) {
+    display: none;
   }
 }
 
@@ -73,37 +71,27 @@ nav a:nth-of-type(1):hover {
   }
   nav a{
     padding: 0 3%;
-    margin-top: 1.2%;
     font-size: 20px;
   }
 }
 @media only screen and (min-width: 900px) and (max-width: 1000px) {
-  nav a{ 
-    margin-top: 2%;
-  }
   nav a:nth-of-type(1) {
     font-size: 0;
   }
 }
 @media only screen and (min-width: 1000px) and (max-width: 1200px) {
-  nav a{ 
-    margin-top: 1.7%;
-  }
   nav a:nth-of-type(1) {
-      top: 14%;
-    font-size: 30px;
+    font-size: 28px;
   }
 }
 </style>
 <head>
   <nav>
-    <center>
     <a href={{ "/" | relative_url}}>Victor J Perez III</a>
 		<a href={{ "/" | relative_url}}>LATEST</a>
     <a href={{ "topics.html" | relative_url}}>TOPICS</a>
     <a href={{ "about.html" | relative_url}}>ABOUT</a>
     <a href="https://victorjperez.github.io/">PORTFOLIO</a>
-  </center>
 	</nav>
 	<title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 </head>
