--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,4 @@
 <hr />
-<span class="footer-wrapper"><p>© 2021 Victor J Perez III - Writings. All Rights Reserved.</p> <a href={{ "feed.xml" | relative_url}}>RSS</a></span>
+<span class="footer-wrapper">
+    <p>© 2021 Victor J Perez III - Writings. All Rights Reserved.</p> <a href={{ "feed.xml" | relative_url}}>RSS</a>
+</span>
